--- a/css/main.css
+++ b/css/main.css
@@ -1548,7 +1548,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8b4f3d;
+  background: #b40a0f;
 }
 .links-of-blogroll {
   font-size: 13px;
